fix photography callout wrapping

--- a/app/assets/stylesheets/about.scss
+++ b/app/assets/stylesheets/about.scss
@@ -37,8 +37,7 @@ html.about-home {
     font-size: 1.5em;
     width: 100%;
     display: block;
-    &:photography {
-    }
+    white-space: nowrap;
   }
 
   .photography .callout {
